[gd_scene load_steps=9 format=3 uid="uid://cd1dd6brrdaj0"]

[ext_resource type="Texture2D" uid="uid://ybc1tfrxbajo" path="res://Assets/MinesweeperTiles.png" id="1_5d08s"]
[ext_resource type="Script" path="res://Scripts/base_game.gd" id="1_emslw"]
[ext_resource type="Script" path="res://Scripts/mine_number_tiles.gd" id="2_53e6c"]
[ext_resource type="Script" path="res://Scripts/background_tiles.gd" id="2_qyf34"]
[ext_resource type="Script" path="res://Scripts/minesweeper_tileset.gd" id="3_vexxw"]
[ext_resource type="Script" path="res://Scripts/hover_tiles.gd" id="5_ibmng"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_palqs"]
texture = ExtResource("1_5d08s")
texture_region_size = Vector2i(90, 90)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0

[sub_resource type="TileSet" id="TileSet_u6yif"]
tile_size = Vector2i(90, 90)
sources/3 = SubResource("TileSetAtlasSource_palqs")

[node name="BaseGame" type="Node2D"]
script = ExtResource("1_emslw")

[node name="Tiles" type="Node2D" parent="."]

[node name="BackgroundTiles" type="TileMapLayer" parent="Tiles"]
unique_name_in_owner = true
tile_set = SubResource("TileSet_u6yif")
script = ExtResource("2_qyf34")

[node name="MineNumberTiles" type="TileMapLayer" parent="Tiles"]
unique_name_in_owner = true
tile_set = SubResource("TileSet_u6yif")
script = ExtResource("2_53e6c")

[node name="ForegroundTiles" type="TileMapLayer" parent="Tiles"]
unique_name_in_owner = true
tile_set = SubResource("TileSet_u6yif")

[node name="FlagTiles" type="TileMapLayer" parent="Tiles"]
unique_name_in_owner = true
tile_set = SubResource("TileSet_u6yif")

[node name="HoverTiles" type="TileMapLayer" parent="Tiles"]
unique_name_in_owner = true
tile_set = SubResource("TileSet_u6yif")
script = ExtResource("5_ibmng")

[node name="ReferenceScripts" type="Node" parent="."]

[node name="MinesweeperTileset" type="Node" parent="ReferenceScripts"]
script = ExtResource("3_vexxw")
